--- a/01 - Variáveis/index.html
+++ b/01 - Variáveis/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <h1 id="saudacao"></h1>
     <p id="apresentacao"></p>
-    <img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Flogos-world.net%2Fwp-content%2Fuploads%2F2023%2F02%2FJavaScript-Emblem.png&sp=1757965906T143dc4cd34adb9da9b5bef909bd632e7fe609716fb80cc8fe426d4054556e56f" alt="Logo Javascript" width="200">
+    <img src="https://static.vecteezy.com/system/resources/previews/027/127/463/non_2x/javascript-logo-javascript-icon-transparent-free-png.png" alt="Logo Javascript" width="200">
     <script src="index.js"></script>
 </body>
 </html>
