--- a/03 - inputs/index.html
+++ b/03 - inputs/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operadores</title>
+    <title>inputs</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Cálculos:</p>
-    <p id="mais"></p>
-    <p id="menos"></p>
-    <p id="vezes"></p>
-    <p id="dividido"></p>
-    <p id="elevado"></p>
-    <p id="resto"></p>
+    <h1>Olá pessoa</h1> 
+    <p>Me diga qual seu nome</p>
+    <label>Nome: </label>
+    <input id="pessoa" type="text">
+    <button id="enviar">enviar</button>
     <script src="index.js"></script>
+    <p id="saudacao"></p>
 </body>
 </html>
