--- a/20 - Jogo de adivinhar números/método 2/index.html
+++ b/20 - Jogo de adivinhar números/método 2/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adivinhar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Vamos adivinhar números</h1>
-    <label>Tentativa: </label>
-    <input type="text" id="guess">
-    <button type="submit" id="enviar">Enviar</button>
-    <p id="msg"></p>
+    
     <script src="index.js"></script>
 </body>
 </html>
